[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Benefactors.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Ticker.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/UAV-OSD-Sans-Mono.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/panel.png" type="Texture" id=4]
[ext_resource path="res://Sprites/edges.png" type="Texture" id=5]
[ext_resource path="res://Scenes/AUXTime.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/CurrentReward.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/YourReward.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/ShieldButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Meter.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Indicator.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/MainPanel.gd" type="Script" id=12]
[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=13]
[ext_resource path="res://Scenes/DefenceSystem.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="MainPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 536, 464 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ticker" parent="." instance=ExtResource( 2 )]
margin_left = 56.0
margin_top = 24.0
margin_right = 966.0
margin_bottom = 64.0
display_speed = 6
news_color = Color( 0, 0.0156863, 0.780392, 1 )

[node name="Benefactors" type="Node2D" parent="."]

[node name="lblBenefactors" type="Label" parent="Benefactors"]
margin_left = 56.0
margin_top = 88.0
margin_right = 344.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 152, 0 )
custom_fonts/font = SubResource( 1 )
text = "Luna's Heros"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Benefactors" parent="Benefactors" instance=ExtResource( 1 )]
margin_left = 56.0
margin_top = 112.0
margin_right = 347.0
margin_bottom = 527.0

[node name="OfferedReward" type="Node2D" parent="."]

[node name="lblReward" type="Label" parent="OfferedReward"]
margin_left = 416.0
margin_top = 88.0
margin_right = 704.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 152, 0 )
custom_fonts/font = SubResource( 1 )
text = "Reward Offered"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentReward" parent="OfferedReward" instance=ExtResource( 7 )]
margin_left = 448.0
margin_top = 116.0
margin_right = 668.0
margin_bottom = 174.0

[node name="YourReward" type="Node2D" parent="."]

[node name="lblYourReward" type="Label" parent="YourReward"]
margin_left = 416.0
margin_top = 448.0
margin_right = 704.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 152, 0 )
custom_fonts/font = SubResource( 1 )
text = "Your Current Reward"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourReward" parent="YourReward" instance=ExtResource( 8 )]
margin_left = 448.0
margin_top = 478.616
margin_right = 668.0
margin_bottom = 536.616

[node name="lblShieldPower" type="Label" parent="."]
margin_left = 752.0
margin_top = 224.0
margin_right = 968.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 152, 0 )
custom_fonts/font = SubResource( 1 )
text = "Shield Power"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuxPower" type="Node2D" parent="."]

[node name="lblAuxPowerLeft" type="Label" parent="AuxPower"]
margin_left = 752.0
margin_top = 88.0
margin_right = 968.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 152, 0 )
custom_fonts/font = SubResource( 1 )
text = "AUX Power Left"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AUXTime" parent="AuxPower" instance=ExtResource( 6 )]
margin_left = 752.0
margin_top = 120.0
margin_right = 972.0
margin_bottom = 178.0
increase_by = 10

[node name="MeterBox" type="ColorRect" parent="."]
margin_left = 752.0
margin_top = 260.0
margin_right = 972.0
margin_bottom = 418.0
color = Color( 0.807843, 0.807843, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="30SecIndicator" parent="." instance=ExtResource( 11 )]
position = Vector2( 796.218, 492.123 )
off_color = Color( 0.258824, 0.027451, 0.027451, 1 )
on_color = Color( 0.8, 0.105882, 0.105882, 1 )
text = "< 30
Seconds
Remain"
value_below = 30

[node name="2MinIndicator" parent="." instance=ExtResource( 11 )]
position = Vector2( 933.177, 492.123 )
off_color = Color( 0.443137, 0.462745, 0.215686, 1 )
on_color = Color( 0.992157, 1, 0.0980392, 1 )
text = "< 2
Minutes
Remain"
value_below = 120

[node name="Edges" type="TextureRect" parent="."]
margin_left = -0.85733
margin_right = 1023.14
margin_bottom = 600.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Meter" parent="." instance=ExtResource( 10 )]
position = Vector2( 867.584, 401.879 )
rotation = 1.38141
min_degrees = -83
max_degrees = 83

[node name="ShieldButton" parent="." instance=ExtResource( 9 )]
position = Vector2( 553.596, 303.995 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 13 )

[node name="RetryFetchTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DefenceSystem" parent="." instance=ExtResource( 14 )]
[connection signal="button_down" from="ShieldButton" to="." method="_on_ShieldButton_button_down"]
[connection signal="gamejolt_request_completed" from="GameJoltAPI" to="." method="_on_GameJoltAPI_gamejolt_request_completed"]
[connection signal="timeout" from="RetryFetchTimer" to="." method="_on_RetryFetchTimer_timeout"]
[connection signal="update_aux" from="DefenceSystem" to="Ticker" method="_on_DefenceSystem_update_aux"]
[connection signal="update_aux" from="DefenceSystem" to="AuxPower/AUXTime" method="_on_DefenceSystem_update_aux"]
[connection signal="update_reward" from="DefenceSystem" to="OfferedReward/CurrentReward" method="_on_DefenceSystem_update_reward"]
[connection signal="update_shield" from="DefenceSystem" to="30SecIndicator" method="_on_DefenceSystem_update_shield"]
[connection signal="update_shield" from="DefenceSystem" to="Ticker" method="_on_DefenceSystem_update_shield"]
[connection signal="update_shield" from="DefenceSystem" to="2MinIndicator" method="_on_DefenceSystem_update_shield"]
[connection signal="update_shield" from="DefenceSystem" to="Meter" method="_on_DefenceSystem_update_shield"]
